# LaneShadow-RN

./: .detoxrc.js  .env.example  .eslintignore  .gitignore  .mcp.json  .npmrc  .prettierignore  .prettierrc.js  .swiftformat  .watchmanconfig  AGENTS.md  CLAUDE.md  CODING_STANDARDS.md  Makefile  README.md  REMEDIATION-STATUS.md  RULES.md  app.config.ts  app.json  biome.json  convex  convex.json  eas.json  eslint.config.js  geospatial.d.ts  implementer_response.json  index.js  jest.components.config.js  jest.config.js  jest.env.js  jest.setup.ts  lefthook.yml  metro.config.js  node_modules  opencode.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  saved-routes.test.ts.bak  (+11 more)
scripts/curation/: .gitignore  README.md  __init__.py  publish_curvature_artifacts.py  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/curation/data/calibration/: dedup_calibration_set.json
scripts/curation/data_prep/: __init__.py  fetch_fhwa.py
scripts/curation/pipeline/: models.py
scripts/curation/pipeline/classification/: __init__.py  archetype.py
scripts/curation/pipeline/dedup/: __init__.py  llm_arbitrator.py  semantic_deduplicator.py
scripts/curation/pipeline/embed/: __init__.py  (+1 more)
scripts/curation/tests/: conftest.py  test_curvature.py  test_inf002_models.py  test_inf004_embed.py  test_inf005_extraction_schema.py  test_inf007_convex_push.py  test_publish_curvature_artifacts.py  test_qual_001.py  test_qual_002.py  test_qual_003.py  test_qual_004.py  test_qual_005.py  test_qual_006.py  test_qual_007.py  test_qual_008.py  test_scrapers.py
(+7321 files in other folders)
